# rusty_life

./: Cargo.toml  LICENSE  PACKAGE.md  README.md  index.html  index.js  package-lock.json  package.json  todo.md  vite.config.mjs
.github/ISSUE_TEMPLATE/: feature-request.md
src/: lib.rs  universe.rs
src/universe/: renderer.rs
src/universe/renderer/: render_params.rs
