[package]
name = "rusty_life"
version = "1.1.0"
edition = "2021"
authors = ["Masato Arnold"]
license = "MIT"
description = "A rust implementation of the popular game of life"
keywords = ["rust", "conways-game-of-life"]
repository = "git+https://github.com/tasamo23/rusty_life.git"
readme = "PACKAGE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
console_error_panic_hook = "=0.1.6"
fixedbitset = "0.5.7"

[dependencies.web-sys]
version = "0.3.69"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'Node',
  'console',
]
